@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

package Database #DDDDDD {

    class TransportTime{
    Stop Start
    Stop End
    DeltaTime Time
    }

}

class Stop{
UUID ID
String Name
Tuple<Double,Double> Geolocation
Map<Stop, DeltaTime> TimeToOtherStops
}



class Route {
 String Name
 List<Stop> Stops
}



class Transit{
Route Route
DateTime StartTime
Vehicle Vehicle
Driver Driver
}

class Vehicle{
UUID ID
Integer Capacity
}

class Driver{
ID:UUID
String FirstName
String LastName
String PESEL
String Phone
}

interface AbstractDriverRepository{
 Driver add(String, String, String, String)
 void update(UUID, Driver)
 Driver get(UUID)
 Set<Driver> getAll()
}

class DriverRepository implements AbstractDriverRepository
class FakeDriverRepository implements AbstractDriverRepository

AbstractDriverRepository *- Driver


interface AbstractVehicleRepository{
 void add(Vehicle)
 void update(UUID, Vehicle)
 Vehicle get(UUID)
 Set<Vehicle> getAll()
}

class VehicleRepository implements AbstractVehicleRepository
class FakeVehicleRepository implements AbstractVehicleRepository


AbstractVehicleRepository *- Vehicle


interface AbstractRouteRepository{
 void add(String, List<Stop>)
 void update(String, List<UUID>)
 Route get(String)
 Set<Route> getAll()
}

class RouteRepository implements AbstractRouteRepository
class FakeRouteRepository implements AbstractRouteRepository


AbstractRouteRepository *- Route

interface AbstractStopRepository{
 Stop add(String, Tuple<Double,Double>, Optional<Map<Stop,DeltaTime>>)
 void update(UUID, String, Tuple<Double,Double>)
 Stop get(UUID)
 Set<Stop> getAll()
 Set<Stop> getMany(List<UUID>)
 void setTimeBetweenStops(Stop, Stop, DeltaTime)
}

AbstractStopRepository *- Stop
class StopRepository implements AbstractStopRepository
class FakeStopRepository implements AbstractStopRepository

Route o- Stop

Transit -- Route
Transit -- Vehicle
Transit -- Driver



@enduml